before cassandra