@@ -1,8 +1,6 @@
 package net.tngroup.acserver.components;
 
 import org.springframework.stereotype.Component;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
@@ -26,21 +24,21 @@ public class CipherComponent {
         }
     }
 
-    public static String encodeDes(String input, String keyString) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, IllegalBlockSizeException, BadPaddingException {
+    public String encodeDes(String input, String keyString) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, IllegalBlockSizeException, BadPaddingException {
         Cipher cipher = Cipher.getInstance("DES");
-            byte[] decodedKey = Base64.getDecoder().decode(keyString);
-            SecretKey key = new SecretKeySpec(decodedKey, 0, decodedKey.length, "DES");
-            cipher.init(Cipher.ENCRYPT_MODE, key);
-            byte[] encValue = cipher.doFinal(input.getBytes(StandardCharsets.UTF_8));
-            return new BASE64Encoder().encode(encValue);
+        byte[] decodedKey = Base64.getDecoder().decode(keyString);
+        SecretKey key = new SecretKeySpec(decodedKey, 0, decodedKey.length, "DES");
+        cipher.init(Cipher.ENCRYPT_MODE, key);
+        byte[] encValue = cipher.doFinal(input.getBytes(StandardCharsets.UTF_8));
+        return new String(Base64.getEncoder().encode(encValue), StandardCharsets.UTF_8);
     }
 
-    public static String decodeDes(String input, String keyString) throws IOException, NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, IllegalBlockSizeException, BadPaddingException {
+    public String decodeDes(String input, String keyString) throws IOException, NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, IllegalBlockSizeException, BadPaddingException {
         Cipher cipher = Cipher.getInstance("DES");
         byte[] decodedKey = Base64.getDecoder().decode(keyString);
         SecretKey key = new SecretKeySpec(decodedKey, 0, decodedKey.length, "DES");
         cipher.init(Cipher.DECRYPT_MODE, key);
-        byte[] decodedValue = new BASE64Decoder().decodeBuffer(input);
+        byte[] decodedValue = Base64.getDecoder().decode(input);
         byte[] decValue = cipher.doFinal(decodedValue);
         return new String(decValue, StandardCharsets.UTF_8);
     }
